# ETL_DATA_FROM_VK

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: units_tests.yml
etl_data_from_vk/: config.py  data_converters.py  data_executor.py  main.py  my_logs_file.py  service.py  vk_data_request.py
etl_data_from_vk/tests/: conftest.py  test_plan
etl_data_from_vk/tests/test_data_converters/: expected_data.json  test_data_converters.py
etl_data_from_vk/tests/test_data_executor/: expected_data.json  raw_data.json  test_data_executor.py
