[tool.poetry]
name = "services for bot's backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "etl_data_from_vk"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
schedule = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 79
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3


[tool.coverage.report]
omit = ["config.py", "__init__.py", "main.py",
"vk_data_request.py", "my_logs_file.py"]
